--- a/CSVParser/CSVParser.csproj
+++ b/CSVParser/CSVParser.csproj
@@ -5,5 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+  <ItemGroup>
+    <InternalsVisibleTo Include="CSVParser.Tests"/>
+  </ItemGroup>
 </Project>
