--- a/CSVParser/CSVParser.csproj
+++ b/CSVParser/CSVParser.csproj
@@ -6,6 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <InternalsVisibleTo Include="CSVParser.Tests"/>
+    <InternalsVisibleTo Include="CSVParser.Tests" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
   </ItemGroup>
 </Project>
